questions: Fix text overflow out of bounds

--- a/src/questions/questions.css
+++ b/src/questions/questions.css
@@ -43,6 +43,10 @@ article .bullet-point {
   font-size: 11px;
 }
 
+.break-long-text  {
+  word-wrap: break-word;
+}
+
 .questionContent {
   padding: 5px 10px;
   /* font-family: "Scope One", "Times New Roman", serif; */
